added responsive menu items

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-transparent navbar-absolute">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="col-md-4 app-title" data-toggle="collapse">
+            <div class="col-md-4 app-title">
                 <a class="app-heading navbar-brand">My Icebox </a>
             </div>
             <button type="button" class="navbar-toggle" data-toggle="collapse">
