--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,6 +6,20 @@
     </a>
 </div>
 <div class="sidebar-wrapper">
+    <div class="header-item-container">
+      <div class="header-items">
+        <i class="material-icons filter-list">filter_list</i>
+        <select class="form-control">
+          <option value="volvo">301/301</option>
+          <option value="saab">302/302</option>
+          <option value="opel">303/303</option>
+        </select>
+      </div>
+      <div class="header-items user-profile">
+          <i class="material-icons person-icon">person</i>
+          <label class="user-name">John Hue</label>
+      </div>
+    </div>
     <div class="nav-container">
         <ul class="nav">
             <li *ngFor="let menuItem of menuItems" routerLinkActive="active" class="{{menuItem.class}}" [ngClass]="{'active':activeRoute=='menuItem.path'}" >
